tests/neg/parser-stability-20.scala
object x0 {
def unapply= Array
x0 match
x0        // error
case x0(
